2007-10-06  Richard Hult  <richard@imendio.com>

	Release 0.16.1.

2007-10-06  Richard Hult  <richard@imendio.com>

	* configure.in: Bump version.

2007-09-10  Richard Hult  <richard@imendio.com>

	* Release 0.16.

	* configure.in: Bump version.

2007-09-05  Jonh Wendell  <jwendell@gnome.org>

	* misc/gedit-plugin/devhelp.gedit-plugin.desktop.in: Updated
	plugin description to the new shortcut key.

2007-09-05  Jonh Wendell  <jwendell@gnome.org>

	* misc/gedit-plugin/devhelp/devhelp.py: Changed keybinding from F7
	to F2, avoiding a conflict with gtk 2.12

2007-08-23  Sunil Mohan Adapa  <sunil@atc.tcs.com>

	* configure.in: Added Telugu (te) to ALL_LINGUAS.

2007-06-18  Richard Hult  <richard@imendio.com>

	* configure.in: Release 0.15.

2007-05-28  Richard Hult  <richard@imendio.com>

	* src/Yelper.cpp: Fix build on Solaris, bug #439054.

2007-05-28  Richard Hult  <richard@imendio.com>

	* configure.in: Bump version.

	* data/devhelp.desktop.in.in: Don't hardcode the png extension,
	fixes bug #440434, patch from Loïc Minier.

2007-05-15  Richard Hult  <richard@imendio.com>

	* Release 0.14.

2007-05-09  Subhransu Behera <arya_subhransu@yahoo.co.in>

	* configure.in: Added Oriya (or) to ALL_LINGUAS.

2007-04-20  Richard Hult  <richard@imendio.com>

	* src/default-prefs-gecko-1-9.js: 
	* src/Makefile.am (default_prefs_files): Use theme colors for
	gecko 1.9 and later, fixes bug #347967.

2007-04-18  Mikael Hallendal  <micke@imendio.com>
	
	* src/dh-main.c (main): Call g_thread_init. Fixes bug #414221

2007-04-18  Richard Hult  <richard@imendio.com>

	* src/dh-window.c (window_init): Remove the broken Esc key
	binding, it interferes with the typeahead search. The window
	manager keybindings should be used instead for minimizing the
	window.

2007-04-17  Richard Hult  <richard@imendio.com>

	* Makefile.am:
	* configure.in:
	* data/
	* data/dtd/:
	* data/ui/: Clean up a bit now that we can move things around
	nicely with svn.

2007-02-18  Ryan Lortie  <desrt@desrt.ca>
