@@ -3,4 +3,3 @@ plugindir = $(libdir)/gedit-2/plugins/devhelp
 plugin_PYTHON = \
 	__init__.py	\
 	devhelp.py
-
