@@ -3,7 +3,7 @@
 data/devhelp.desktop.in.in
 data/devhelp.schemas.in
 data/ui/devhelp.glade
-misc/gedit-plugin/devhelp.gedit-plugin.desktop.in
+misc/gedit-plugin/devhelp.desktop.in
 src/dh-base.c
 src/dh-book-tree.c
 src/dh-html.c
